# knowledge-system

./: .gitignore  Dockerfile  Product-Instruction.en-US.md  Product-Instruction.ja-JP.md  Product-Instruction.md  README.en-US.md  README.ja-JP.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  product instruction.md  start.sh
.github/workflows/: ci.yml  deploy-ec2.yml  docker.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 98fb78b80f45_add_favorites_table.py  a59deba3aabb_add_search_vector_to_notes.py  b267a5c15845_add_user_id_to_tags.py  dcdcc613d5fc_create_initial_tables.py
backend/app/: auth.py  config.py  crud.py  db.py  main.py  schemas.py
backend/app/api/: favorite.py  note.py  tag.py  token.py  user.py
backend/app/auth/: __init__.py  auth.py
backend/app/crud/: __init__.py  favorite.py  note.py  tag.py  user.py
backend/app/models/: __init__.py  favorite.py  note.py  note_tags.py  tag.py  user.py
backend/app/routers/: favorite.py  note.py  tag.py  token.py  user.py
backend/app/schemas/: __init__.py  note.py  response.py  summary.py  tag.py  user.py
backend/app/utils/: response.py  summary_agent.py
backend/tests/: conftest.py  test_favorite.py  test_note.py  test_tag.py  test_user.py  后端测试设计.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  output.css
frontend/src/api/: auth.ts  http.ts  notes.ts  tags.ts
frontend/src/components/: AlertDialog.tsx  ConfirmDialog.tsx  (+6 more)
scripts/: ec2-init.sh
(+4 files in other folders)
